# conwaysSFML_CPP

./: CGOL.cpp  CMakeLists.txt  CONTRIBUTING.md  Cell.cpp  Cell.hpp  README.md  cell.cpp  cell.hpp  main.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  conways.cbp
inc/: Cell.hpp
include/: Cell.hpp
src/: Cell.cpp  main.cpp
